--- a/src/stylesheets/base/base.scss
+++ b/src/stylesheets/base/base.scss
@@ -1,6 +1,6 @@
 a {
   text-decoration: none;
-  color: #fff;
+  color: initial;
 }
 
 li {
@@ -9,6 +9,8 @@ li {
 
 h2 {
   text-transform: uppercase;
+  font-weight: 400;
+  padding: 2vh 0;
 
   /*&:after {
     content: "";
@@ -29,6 +31,7 @@ input {
   border-radius: 0px;
   background: transparent;
   color: #FFFFFF;
+  font-weight: lighter;
 
   &::placeholder {
     text-align: center;
